# mokuroku

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.org
examples/: numdex.rs  tagged.rs
examples/tagged/: Cargo.toml  README.md
examples/tagged/src/: main.rs
src/: base32.rs  lib.rs
