[package]
name = "mokuroku"
version = "3.0.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2018"
description = "Secondary indices like PouchDB for RocksDB in Rust."
repository = "https://github.com/nlfiedler/mokuroku"
readme = "README.md"
keywords = ["database", "index", "rocksdb", "search"]
license = "Apache-2.0"
exclude = [
    "TODO.org",
    "test/*",
]

[dependencies]
anyhow = { version = "1.0.55", optional = true }
rocksdb = "0.18.0"
thiserror = "1.0.30"
serde_cbor = { version = "0.11.2", optional = true }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
